OY-4987 Päivitetty JVM versioon 21